--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,48 @@ node_js:
 
 jobs:
   include:
-    
-          
     - stage: SAST Check
       script:
-        - zip -r project.zip . -x "*.git*" "*/node_modules/*" "*/vendor/*" "*.zip"
+        - echo "Preparing for SAST Scan..."
+        - zip -r project.zip . -x "*.git*" "*/node_modules/*" "*/vendor/*" "*.zip" > /dev/null 2>&1
+        - echo "Initiating SAST scan. This may take a few minutes..."
         - |
-          RESPONSE=$(curl -X POST             -H "Client-ID: $INTRUCEPT_CLIENT_ID"             -H "Client-Secret: $INTRUCEPT_CLIENT_SECRET"             -F "projectZipFile=@project.zip"             -F "applicationId=$INTRUCEPT_APPLICATION_ID"             -F "scanName=Csharp Dvcsharp SAST Scan - $TRAVIS_COMMIT"             -F "language=c#"             https://appsecops-api.intruceptlabs.com/api/v1/integrations/sast-scans)
-
+          set +e
+          RESPONSE=$(curl -s -X POST \
+            -H "Client-ID: $INTRUCEPT_CLIENT_ID" \
+            -H "Client-Secret: $INTRUCEPT_CLIENT_SECRET" \
+            -F "projectZipFile=@project.zip" \
+            -F "applicationId=$INTRUCEPT_APPLICATION_ID" \
+            -F "scanName=Csharp Dvcsharp SAST Scan - $TRAVIS_COMMIT" \
+            -F "language=c#" \
+            https://appsecops-api.intruceptlabs.com/api/v1/integrations/sast-scans)
           
-          VULNS_TABLE=$(echo $RESPONSE | jq -r '.vulnsTable')
-          echo "Vulnerabilities Table:"
-          echo "$VULNS_TABLE"     
-
-    - stage: SCA Check
-      script:
-        - zip -r project.zip . -x "*.git*" "*/node_modules/*" "*/vendor/*" "*.zip"
-        - |
-          RESPONSE=$(curl -X POST             -H "Client-ID: $INTRUCEPT_CLIENT_ID"             -H "Client-Secret: $INTRUCEPT_CLIENT_SECRET"             -F "projectZipFile=@project.zip"             -F "applicationId=$INTRUCEPT_APPLICATION_ID"             -F "scanName=Csharp Dvcsharp SCA Scan - $TRAVIS_COMMIT"             -F "language=c#"             https://appsecops-api.intruceptlabs.com/api/v1/integrations/sca-scans)
-          
-          VULNS_TABLE=$(echo $RESPONSE | jq -r '.vulnsTable')
+          echo "SAST Scan completed. Analyzing results..."
+          VULNS_TABLE=$(echo "$RESPONSE" | jq -r '.vulnsTable')
           echo "Vulnerabilities Table:"
           echo "$VULNS_TABLE"
           
+          set -e
 
-            
+    - stage: SCA Check
+      script:
+        - echo "Preparing for SCA Scan..."
+        - zip -r project.zip . -x "*.git*" "*/node_modules/*" "*/vendor/*" "*.zip" > /dev/null 2>&1
+        - echo "Initiating SCA scan. This may take a few minutes..."
+        - |
+          set +e
+          RESPONSE=$(curl -s -X POST \
+            -H "Client-ID: $INTRUCEPT_CLIENT_ID" \
+            -H "Client-Secret: $INTRUCEPT_CLIENT_SECRET" \
+            -F "projectZipFile=@project.zip" \
+            -F "applicationId=$INTRUCEPT_APPLICATION_ID" \
+            -F "scanName=Csharp Dvcsharp SCA Scan - $TRAVIS_COMMIT" \
+            -F "language=c#" \
+            https://appsecops-api.intruceptlabs.com/api/v1/integrations/sca-scans)
           
+          echo "SCA Scan completed. Analyzing results..."
+          VULNS_TABLE=$(echo "$RESPONSE" | jq -r '.vulnsTable')
+          echo "Vulnerabilities Table:"
+          echo "$VULNS_TABLE"
           
-          
+          set -e
